--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>springcloud-consumer-dept-ribbon-8000</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
+        <module>springcloud-consumer-dept-feign-8000</module>
+        <module>springcloud-provider-dept-hystrix-8001</module>
     </modules>
 
     <packaging>pom</packaging>
