--- a/springcloud-api/pom.xml
+++ b/springcloud-api/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>mybatis-plus-annotation</artifactId>
             <version>3.4.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
+        </dependency>
     </dependencies>
 
 </project>
