--- a/springcloud-consumer-hystrix-dashboard-9002/pom.xml
+++ b/springcloud-consumer-hystrix-dashboard-9002/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-consumer-dept-8000</artifactId>
-    <description>部门微服务消费者</description>
+    <artifactId>springcloud-consumer-hystrix-dashboard-9002</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -31,6 +30,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+        <!-- Hystrix -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
     </dependencies>
 
