--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>springcloud-consumer-dept-feign-8000</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-consumer-hystrix-dashboard-9002</module>
+        <module>springcloud-zuul-gateway-9527</module>
     </modules>
 
     <packaging>pom</packaging>
